--- a/javascript-basics.html
+++ b/javascript-basics.html
@@ -1,45 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <title>JavaScript Basics</title>
-    <link rel="stylesheet" type="text/css" href="javascript-basics.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id = "wrapper">
-        <div id = "top_header">JavaScript Basics</div>
-        <div id = "navigation">
-                <a href="#">Home</a>
-                <ul>
-                    <li><a href="#">JavaScript Overview</a>
-                        <ul>
-                            <li><a href="#">Variable Declaration</a></li>
-                            <li><a href="#">Variable Assignement</a></li>
-                            <li><a href="#">Data Types</a></li>
-                            <li><a href="#">Conditionals</a></li>
-                            <li><a href="#">Loops</a></li>
-                            <li><a href="#">Functions</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Project</a></li>
-                    <li><a href="#">Assignments</a></li>
-                    <li><a href="#">Quiz</a></li>
+    <div class="wrapper">
+        <h1>JavaScript Basics</h1>
+        <div class="navigation">
+            <a href="#">Home</a>
+            <ul class="first-level">
+                <li>JavaScript Overview</li>
+                <ul class="second-level">
+                    <li><a href="#">Variable Declaration</a></li>
+                    <li><a href="#">Variable Assignment</a></li>
+                    <li><a href="#">Data Type</a></li>
+                    <li><a href="#">Conditionals</a></li>
+                    <li><a href="#">Loops</a></a></li>
+                    <li><a href="#">Functions</a></li>
                 </ul>
-        </div>
-        <div id = "content">
-            <h2>JavaScript Basics</h2>
-            <p>JavaScript is a cross-platform, object-oriented scripting language. JavaScript is extremely popular for a variety of reasons. It is a small and lightweigt language allowing maximum flexibility for developers to take it in a bunch of different directions. JavaScript lives inside a host environment (a web browser or Node server), it can be connected to the objecs of these environments to provide programmatic control over them.</p>
-            <ul>
-                <li><p><a href="#">Variable Declaration</a> JavaScript variables are containers for storing data values - imagine a cup you fill with coffee, the cup holds the coffee, a variable holds the value. All JavaScript variables must be identified with unique names. These unique names are called identifiers, </p><p id="example_text">var x;</p></li>
-                <li><p><a href="#">Variable Assignment</a> Assignment operators assign values to JavaScript variables - our cup can now have coffee poured in it, giving our variable a value to hold. The = assignment operator assigns a value to a variable, </p><p id = "example_text">var x = 10;</p></li>
-                <li><a href="#">Data Types</a></li>
-                <li><a href="#">Conditionals</a></li>
-                <li><a href="#">Loops</a></li>
-                <li><a href="#">Functions</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Assignments</a></li>
+                <li><a href="#">Quiz</a></li>
             </ul>
         </div>
-        <div id = "footer">
-            <p>For more useful information check out this url: <a href="#">JavaScript</a></p>
+        <div class="main-content">
+            <h2>JavaScript Basics</h2>
+            <p>JavaScript is a cross-platform, object-oriented scripting language. JavaScript is extremely popular for a variety of reasons. It is a small and lightweight language allowing maximum flexibility for developers to take it in a bunch of different dilutions. JavaScript lives inside a host environment (a web browser or Node server) , it can be connected to objects of these environments to provide programmatic control over.</p>
+            <ul>
+                <li><a href="#">Variable Declaration</a> JavaScript variables are containers for storing data values - imagine a cup you fill with coffee, the cup holds the coffee, a variable holds a value. All JavaScript variables must be identified with unique names. These unique names are called identifiers. <span class="purple">var x</span> </li>
+                <li><a href="#">Variable Assignment</a> sAssignment operators assign values to JavaScript variables - our cup can now have coffee poured in it, giving our variable a value to hold. The = assignment operator assigns a value to a variable. var x = 10; </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
+        <p class="footer">For more useful information check out this url: <a href="#">JavaScript</a></p>
     </div>
 </body>
 </html>
